Label fixes, improvements, alignment of download controls.

--- a/shaclvalidator-web/src/main/resources/resources/css/style.css
+++ b/shaclvalidator-web/src/main/resources/resources/css/style.css
@@ -115,3 +115,6 @@ body {
     cursor: pointer;
     cursor: hand;
 }
+.downloadSelect {
+    width: 200px !important;
+}
